Updated to latest versions of StarDevLLC plugins and libraries